orchestration/k8s/aws/engines-builder.yaml
apiVersion: v1
kind: Pod
metadata:
  name: engines-builder
  namespace: observability 
spec:
  restartPolicy: Never
  serviceAccountName: s3-checkpoints-engines-sa

  # Shared volume for checkpoints
  volumes:
    - name: model-storage
      emptyDir: {}          # or use a PVC if you want persistence

  # 1) Init container: pull ONNX/weights from S3
  containers:
    - name: da-builder
      image: 762853498770.dkr.ecr.us-east-1.amazonaws.com/gemma-3-triton-server 
      imagePullPolicy: Always
      command: ["/bin/bash", "-c", "sleep infinity"]   # attach and run manually
      resources:
        limits:
          nvidia.com/gpu: 1
      securityContext:
        privileged: true
      volumeMounts:
        - name: model-storage
          mountPath: /opt/tritonserver/projects/checkpoints

  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: app 
            operator: In
            values: ["inference-node-label"]
